--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Grupo 10</a>
+          <a class="navbar-brand" href="#">GRUPO #10</a>
         </div>
       </div>
     </nav>
